--- a/Showtimes.css
+++ b/Showtimes.css
@@ -1,59 +1,114 @@
 *{
     margin: 0;
+    font-family: 'Be Vietnam Pro', sans-serif;
 }
 
 body {
-    font-family: 'Roboto', sans-serif;
-    color: white;
+    background-color: #151515;
 }
-.showtimes {
-    height: 100vh;
-    width: 100%;
+.navbar{
     background-color: black;
-}
-
-.showtime-wrapper {
-    display: flex;
     width: 100%;
     height: 50px;
-    align-items: center;
-    text-align: center;
-    background-color: purple;
+    position: sticky;
+    top: 0;
 }
-
-.showtime-go-back {
-    flex: 1;
-    background-color: blue;
-}
-
-.showtime-header {
-    flex: 6;
-    background-color: green;
-}
-
-.showtime-end {
-    flex: 1;
-    background-color: red;
-}
-
-.filter-wrapper {
+.navbar-container {
     display: flex;
-    width: 100%;
-    height: 50px;
-    align-items: center;
+    justify-content: center;
+    padding: 0 50px;
+    height: 100%;
+    color: lightgray;
+}
+.navbar-btn {
+    background-color: black;
+    color: lightgray;
+    border: none;
+    outline: none;
+    opacity: 0.8;
+    text-decoration: none;
+    font-size: 30px;
+}
+.navbar-btn:hover {
+    opacity:1;
+}
+
+.exit:hover {
+    color: crimson;
+}
+
+.exit {
+    flex: 1;
+    justify-self: flex-end;
+}
+
+.go-back {
+    flex: 1;
+    justify-self: flex-start;
+}
+
+.navbar-title {
+    flex: 9;
+    justify-self: center;
     text-align: center;
-    background-color: rgb(53, 14, 160);
-
+    font-size: 30px;
+    letter-spacing: 4px;
+}
+.showtimes-header {
+    padding: 50px;
+    display: flex;
+    flex-direction: column;
+    color: lightgray;
 }
 
-.filter-date {
-    flex: 1;
+.circle-img {
+    border-radius: 50%;
+    width: 150px;
+    height: 150px;
+    opacity: 0.9;
 }
 
-.filter-movie {
-    flex: 1;
+.movie-name {
+    font-size: 50px;
+    font-weight: 700;
 }
 
-.filter-promo-code {
-    flex: 1;
+.showtimes-sub-title {
+    display: flex;
+    color: darkgray;
 }
+
+.showtimes-body{
+    background-color: black;
+    width: 80vw;
+    margin-left: 50px;
+    padding: 0 20px 10px 20px;
+    border-radius: 10px;
+}
+
+.showtimes-dates-container, .showtimes-container {
+    display: flex;
+    flex-direction: column;
+    margin: 20px 0;
+}
+
+.showtimes-btn {
+    border-radius: 20px;
+    padding: 10px 20px;
+    border: 2px solid white;
+    color: white;
+    background-color: #151515;
+    margin: 5px;
+}
+.showtimes-btn:hover {
+    background-color: white;
+    color: black;
+}
+
+.crimson-title {
+    font-size:25px;
+    padding: 10px 0;
+    color: crimson;
+    font-weight: 500;
+}
+
