--- a/style/login_style.css
+++ b/style/login_style.css
@@ -7,7 +7,7 @@
 
 body{
     color: #FFFFFF;
-    background: linear-gradient( rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2) ), url('../img/popcorn.jpeg') no-repeat center;
+    background: linear-gradient( rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2) ), url('../images/popcorn.jpeg') no-repeat center;
     background-size: cover;
 }
 
