--- a/style/create-account_style.css
+++ b/style/create-account_style.css
@@ -1,5 +1,5 @@
 body{
-    background-color: #4d4d4d;
+    background-color: #151515;
     font-family: 'Be Vietnam Pro', sans-serif;
     color: white;
 }
@@ -22,7 +22,7 @@ body{
     margin: auto;
     max-width: 500px;
     padding: 40px 40px 60px;
-    background:#1515159b;
+    background:black;
     border-radius: 10px;
     box-shadow: 0 15px 25px rgba(0,0,0,0.7);
 }
