--- a/style/Showtimes.css
+++ b/style/Showtimes.css
@@ -25,12 +25,13 @@ body {
     color: lightgray;
     border: none;
     outline: none;
-    opacity: 0.8;
+    opacity: 1;
     text-decoration: none;
     font-size: 30px;
+    cursor: pointer;
 }
 .navbar-btn:hover {
-    opacity:1;
+    opacity:0.7;
 }
 
 .exit:hover {
@@ -92,6 +93,7 @@ body {
     color: white;
     background-color: #151515;
     margin: 5px;
+    cursor: pointer;
 }
 .showtimes-btn:hover {
     background-color: white;
