--- a/style/admin_style.css
+++ b/style/admin_style.css
@@ -26,7 +26,7 @@ body{
     box-shadow: 0 15px 20px rgba(0,0,0,0.7);
 }
 
-.sidebar h2, h4{
+.sidebar h2, .sidebar h4{
     text-transform: uppercase;
     text-align: center;
     margin-bottom: 30px;
