finished manage promos and small style edits

--- a/style/manage-promo_style.css
+++ b/style/manage-promo_style.css
@@ -1,12 +1,18 @@
-.suspend-user-container, .recover-user-container{
+.addPromo-container, .currentPromos-container{
     position: relative;
     width: 70%;
     margin: 10px 20px 80px;
     padding: 50px 40px 40px;
-    min-width: 300px;
+    min-width: 800px;
     background:black;
     border-radius: 10px;
     box-shadow: 0 15px 25px rgba(0,0,0,0.7);
+}
+
+th, td{
+    text-align: left;
+    width:30%;
+    padding: 10px;
 }
 
 form .input-group{
@@ -42,7 +48,7 @@ form .input-group input:focus + label, .form .input-group input:valid + label{
     font-size: 0.9rem;
 }
 
-.suspend-btn, .recover-btn {
+.addCode-btn{
     background-color: crimson;
     color: white;
     padding: 10px 20px;
@@ -57,6 +63,24 @@ form .input-group input:focus + label, .form .input-group input:valid + label{
     cursor: pointer;
 }
 
-.suspend-btn:hover, .recover-btn:hover{
+.delete-btn{
+    background-color: crimson;
+    color: white;
+    padding: 10px 20px;
+    border-radius: 20px;
+    border: none;
+    outline: none;
+    display: block;
+    margin-left: auto;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    cursor: pointer;
+}
+
+.amount{
+    text-align: right;
+}
+
+.addCode-btn:hover, .delete-btn:hover{
     background-color:rgb(228, 54, 54);
 }
