--- a/style/sidebar_style.css
+++ b/style/sidebar_style.css
@@ -58,6 +58,7 @@ body{
 .sidebar #active{
     background:crimson;
     border-radius: 30px 0px 0px 30px;
+    font-weight: bold;
 }
 
 .sidebar img{
