--- a/style/admin-profile_style.css
+++ b/style/admin-profile_style.css
@@ -1,3 +1,8 @@
+* {
+    margin: 0;
+    font-family: 'Be Vietnam Pro', sans-serif;
+}
+
 .header, h3{
     padding: 20px;
 }
@@ -14,7 +19,6 @@
 
 .change{
     margin-bottom: 70px;
-    border: 0.5px solid gray;
 }
 
 
@@ -23,7 +27,7 @@ form .input-group{
 }
 
 form .input-group input{
-    width: 100%;
+    width: 60%;
     padding: 10px 0;
     font-size: 1rem;
     letter-spacing: 1px;
