--- a/style/create-account_style.css
+++ b/style/create-account_style.css
@@ -1,6 +1,10 @@
+* {
+    margin: 0;
+    font-family: 'Be Vietnam Pro', sans-serif;
+}
+
 body{
     background-color: #4d4d4d;
-    font-family: 'Be Vietnam Pro', sans-serif;
     color: white;
 }
 
