--- a/style/create-admin_style.css
+++ b/style/create-admin_style.css
@@ -1,3 +1,8 @@
+* {
+    margin: 0;
+    font-family: 'Be Vietnam Pro', sans-serif;
+}
+
 .create-container{
     position: relative;
     width: 70%;
