--- a/style/manage-users_style.css
+++ b/style/manage-users_style.css
@@ -1,3 +1,8 @@
+* {
+    margin: 0;
+    font-family: 'Be Vietnam Pro', sans-serif;
+}
+
 .suspend-user-container, .recover-user-container{
     position: relative;
     width: 70%;
