--- a/style/payment-method_style.css
+++ b/style/payment-method_style.css
@@ -1,3 +1,8 @@
+* {
+    margin: 0;
+    font-family: 'Be Vietnam Pro', sans-serif;
+}
+
 .switch {
     position: relative;
     display: inline-block;
