--- a/style/movie-info.css
+++ b/style/movie-info.css
@@ -19,6 +19,7 @@ body {
     padding: 0 50px;
     height: 100%;
     color: lightgray;
+    box-shadow: 0 15px 25px rgba(0,0,0,0.7);
 }
 .navbar-btn {
     background-color: black;
@@ -60,6 +61,9 @@ body {
     width: 90vw;
     margin: 50px 5vw;
     background-color:black;
+    border-radius: 10px;
+    border: 0.5px solid crimson;
+    box-shadow: 0 15px 25px rgba(0,0,0,0.7);
 }
 
 .trailer {
@@ -74,6 +78,8 @@ body {
     color: lightgray;
     background-color: black;
     border-radius: 10px;
+    border: 0.5px solid crimson;
+    box-shadow: 0 15px 25px rgba(0,0,0,0.7);
 }
 
 .movie-name {
