--- a/style/order-confirmation.css
+++ b/style/order-confirmation.css
@@ -5,46 +5,6 @@
 body {
     background-color: #151515;
 }
-.navbar{
-    background-color: black;
-    width: 100%;
-    height: 50px;
-    position: sticky;
-    top: 0;
-}
-.navbar-container {
-    display: flex;
-    height: 100%;
-    color: lightgray;
-    width: 100%;
-}
-.navbar-btn {
-    background-color: black;
-    color: lightgray;
-    border: none;
-    outline: none;
-    text-decoration: none;
-    font-size: 30px;
-    cursor: pointer;
-}
-
-.go-back:hover {
-    opacity:0.6;
-}
-
-.exit:hover {
-    color: crimson;
-}
-
-.exit {
-    margin-right: 50px;
-    margin-left: auto;
-}
-
-.go-back {
-    margin-left: 50px;
-    margin-right: auto;
-}
 
 .container {
     display : flex;
@@ -70,7 +30,6 @@ body {
     margin-top: 50px;
     border-radius: 15px;
     padding: 20px;
-    opacity: 0.7;
 }
 
 .receipt-header {
@@ -85,4 +44,21 @@ body {
 .items {
     margin-left: 0;
     margin-right: auto;
+}
+
+.go-home {
+    background-color: crimson;
+    color: white;
+    padding: 10px 20px;
+    border-radius: 20px;
+    border: none;
+    outline: none;
+    font-size: 20px;
+    width: 300px;
+    margin: 20px 0;
+    cursor: pointer;
+}
+
+.go-home:hover {
+    opacity: 0.7;
 }
