--- a/style/registration-confirmation.css
+++ b/style/registration-confirmation.css
@@ -3,66 +3,33 @@
     font-family: 'Be Vietnam Pro', sans-serif;
 }
 
-.navbar{
-    background-color: black;
-    width: 100%;
-    height: 50px;
-    position: sticky;
-    top: 0;
-}
-.navbar-container {
-    display: flex;
-    height: 100%;
-    color: lightgray;
-    width: 100%;
-}
-.navbar-btn {
-    background-color: black;
-    color: lightgray;
-    border: none;
-    outline: none;
-    text-decoration: none;
-    font-size: 30px;
-    cursor: pointer;
+body {
+    background-color: #151515;
+    color: white;
+    
 }
 
-.go-back:hover {
-    opacity:0.6;
+.container {
+    margin: 50px;
+
 }
 
-.exit:hover {
-    color: crimson;
-}
-
-.exit {
-    margin-right: 50px;
-    margin-left: auto;
-}
-
-.go-back {
-    margin-left: 50px;
-    margin-right: auto;
-}
-
-.header, h3{
-    padding: 20px;
-}
-
-.profile, .change{
-    position: relative;
-    width: 70%;
-    margin: 10px 20px 20px;
-    padding: 50px 40px 40px;
-    background:black;
-    border-radius: 10px;
-    box-shadow: 0 15px 25px rgba(0,0,0,0.7);
+.header {
+    font-size: 40px;
 }
 
 .change{
     margin-bottom: 70px;
     border: 0.5px solid gray;
-}
+    position: relative;
+    width: 30%;
+    margin: 10px 20px 20px;
+    padding: 50px 40px 40px;
+    background:black;
+    border-radius: 10px;
+    box-shadow: 0 15px 25px rgba(0,0,0,0.7);
 
+}
 
 form .input-group{
     position: relative;
