--- a/style/checkout.css
+++ b/style/checkout.css
@@ -85,32 +85,111 @@ body {
 .content-container {
     display: flex;
     height: 500px;
+    margin-top: 100px;
     
 }
 
 .left-container {
     display: flex;
-
+    flex-direction: column;
+    
+    margin: 0 50px;
 }
 
-.billing-address {
-    flex: 1;
+.change{
+    position: relative;
+    width: 70%;
+    min-width:fit-content;
+    margin: 10px 20px 20px;
+    padding: 50px 40px 40px;
+    background:black;
+    border-radius: 10px;
+    box-shadow: 0 15px 25px rgba(0,0,0,0.7);
 }
 
-.payment {
-    flex: 1;
+.change{
+    margin-bottom: 70px;
+    border: 0.5px solid gray;
+}
+
+
+form .input-group{
+    position: relative;
+}
+
+form .input-group input{
+    width: 80%;
+    padding: 10px 0;
+    font-size: 1rem;
+    letter-spacing: 1px;
+    margin-bottom: 30px;
+    border: none;
+    border-bottom: 1px solid white;
+    outline: none;
+    background-color: transparent;
+    color: inherit;
+}
+
+.expiration input{
+    width: 20%;
+    padding: 10px 0;
+    font-size: 1rem;
+    letter-spacing: 1px;
+    margin-bottom: 30px;
+    border: none;
+    border-bottom: 1px solid white;
+    outline: none;
+    background-color: transparent;
+    color: inherit;
+}
+
+form .input-group label{
+    position: absolute;
+    top: 0;
+    left: 0;
+    padding: 10px 0;
+    font-size: 1rem;
+    pointer-events: none;
+    transition: 0.3s ease-out;
+}
+
+form .input-group input:focus + label, .form .input-group input:valid + label{
+    transform: translateY(-18px);
+    color: crimson;
+    font-size: 0.9rem;
+}
+
+.update-btn {
+    background-color: crimson;
+    color: white;
+    padding: 10px 20px;
+    border-radius: 20px;
+    border: none;
+    outline: none;
+    display: block;
+    margin-top: 80px;
+    margin-left: auto;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    cursor: pointer;
+}
+
+.update-btn:hover{
+    background-color:rgb(228, 54, 54);
 }
 
 
 
 .receipt {
-    background-color:rgb(117, 117, 117);
-    color:white;
-    width: 40%;
+    background:black;
+    border-radius: 10px;
+    border: 0.5px solid gray;
+    box-shadow: 0 15px 25px rgba(0,0,0,0.7);
+    width: 30%;
     height: 300px;
     margin-top: 30px;
-    margin-left: 400px;
-    margin-right: 100px;
+    margin-left: auto;
+    margin-right: 200px;
     border-radius: 15px;
     padding: 20px;
     opacity: 1;
@@ -118,7 +197,7 @@ body {
 
 .line {
     height: 1px;
-    width: 400px;
+    width: 415px;
     background-color: white;
     border: none;
 
@@ -179,10 +258,3 @@ body {
 .footer-btn:hover {
     opacity: 0.6;
 }
-
-
-
-
-
-
-
